src/css/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  border: 0;
}

::-webkit-scrollbar {
  height: 10px;
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: #fdfdfd;
  border-radius: 0px;
}

::selection {
  background-color: #ffffff;
  color: #000000;
}

html {
  background-color: black;
}

html,
body {
  max-width: 100vw;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  overflow-x: hidden;
  color: white;
}

a {
  color: inherit;
  text-decoration: none;
}

.bright * {
  text-shadow: 1px 1px 2px white, 0 0 1em white, 0 0 0.1em white;
}

.bright__border {
  box-shadow:
    0.1px 0.1px 0.1px white, 0 0 0.1em white, 0 0 0.4em white,
    inset 0.1px 0.1px 0.1px white, inset 0 0 0.1em white, inset 0 0 0.4em white;
}

.scanlines {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 12%;
  background-color: rgb(0, 0, 0);
  background-image: linear-gradient(0deg, rgb(60, 60, 60) 5%, rgb(220, 220, 220) 50%);
  background-size: 1.2% 1.2%;
  animation: flicker 100ms infinite;
  pointer-events: none;
}

.scanner {
  animation: scanning 1s infinite linear;
  background-color: rgba(133, 133, 133, 0.266);
  position: fixed;
  top: 0;
  left: 0;
  height: 0.5%;
  width: 100%;
}

.--hidden {
  display: none;
}

@keyframes scanning {
  0% {
    transform: translateY(0%);
  }

  100% {
    transform: translateY(100vh);
  }
}

@keyframes flicker {
  0% {
    transform: translateY(5px);
  }

  100% {
    transform: translateY(0px);
  }
}

